<resources>
    <string name="app_name">MovingDetector Example</string>
    <string name="distance_to_move">Distance to move in meter</string>
    <string name="distance_has_moved">Distance has moved: %f</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="stop">STOP</string>
    <string name="stopped">STOPPED</string>
    <string name="tracking">TRACKING</string>
    <string name="done">DONE</string>
    <string name="ok">OK</string>
    <string name="permission_has_not_been_granted">Location permission has not been granted. Terminate!</string>
    <string name="unsatisfied_setting">Location settings are unsatisfied. Terminate!</string>
</resources>
