<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peanut.example.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_distance_to_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_to_move"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_distance_to_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_distance_to_move" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_distance_has_moved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_distance_to_move" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_further_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_distance_has_moved" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_further_details" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@id/button_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_status" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintBaseline_toBaselineOf="@id/button_start"
        app:layout_constraintEnd_toStartOf="@id/button_resume"
        app:layout_constraintStart_toEndOf="@id/button_start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        app:layout_constraintBaseline_toBaselineOf="@id/button_start"
        app:layout_constraintEnd_toStartOf="@id/button_stop"
        app:layout_constraintStart_toEndOf="@id/button_pause" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBaseline_toBaselineOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_resume" />
</androidx.constraintlayout.widget.ConstraintLayout>